1.6.0 (2010-05-??)
    * Retired our custom crash reporting in favor of Google's new
      built-in reporting facility (available starting with Froyo).
    * Support installation on SD card.

1.5.7 (2010-05-11)
    * Fixed a stupid bug introduced in the last commit that broke
      orientation change and potentially caused crashes.

1.5.6 (2010-05-04)
    * Work around an Android bug that caused Autostarts to crash when
      processing certain packages that are advertised as being installed,
      but really are broken.

1.5.5 (2010-03-26)
    * Included higher resolution icons for HDPI screens, looks nicer now.
    * Automated exception-reporting functionality.
    * Very slightly improved progressbar behavior during orientation
      change.

1.5.3 (2010-02-23)
    * Show a warning before disabling Google Talk with respect to Market
      downloads.
    * Fixed display of component labels (a regression introduced in the
      1.5.0 backend refactor).
    * Improved way of using the root access; should work on more devices
      now, including the Archos devices and the Sholes Droid Mod.

1.5.0 (2010-02-10)
    * Major rewrite of how we retrieve package information. We no longer
      need to keep track of disabled components ourselves, and an uninstall
      of Autostarts no longer is an issue. The new backend also makes
      it possible for us to show additional events that are not in our
      database. Last but not least we can now show components that are
      disabled by default, and make a clean distinction between that
      initial state and changes by the user.
    * Compiled against 2.1 SDK.
    * Included pretty names and descriptions for a large number of new 
      events.

1.2.2 (2010-01-31)
    * Added German translation (does not include event texts).
    * Added support for two new events (SECRET_CODE, SPN_STRINGS_UPDATED).
    * Improved handling of certain events (like PACKAGE_INSTALLED and