@@ -2,6 +2,7 @@
     * Retired our custom crash reporting in favor of Google's new
       built-in reporting facility (available starting with Froyo).
     * Support installation on SD card.
+    * Added support for a number broadcasts new in Android 2.2.
 
 1.5.7 (2010-05-11)
     * Fixed a stupid bug introduced in the last commit that broke
